crates/oxc_react_compiler/tests/snapshots/object-entries-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-entries-mutation.js
---
import { c as _c } from "react/compiler-runtime";
import { makeObject_Primitives, Stringify } from "shared-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.object) {
		const object = { object: props.object };
		const entries = Object.entries(object);
		entries.map(_temp);
		t0 = <Stringify entries={entries} />;
		$[0] = props.object;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function _temp(t0) {
	const [, value] = t0;
	value.updated = true;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ object: { key: makeObject_Primitives() } }]
};
