crates/oxc_react_compiler/tests/snapshots/object-expression-accessor-generated-names.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-accessor-generated-names.js
---
function Component(t0) {
	const { value } = t0;
	let t1;
	let t2;
	{
		const first = { method(y) {
			return y;
		} };
		const x = value;
		let t3;
		{
			t3 = { get value() {
				return x;
			} };
		}
		const object = t3;
		t1 = object.value;
		t2 = first.method(1);
	}
	const t3 = t1 + t2;
	let t4;
	{
		t4 = <div>{t3}</div>;
	}
	return t4;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
