crates/oxc_react_compiler/tests/snapshots/object-expression-accessor-manual-memoization.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-accessor-manual-memoization.js
---
import { useCallback, useMemo } from "react";
function Component(t0) {
	const { value } = t0;
	let t1;
	let t2;
	{
		t1 = () => value;
		t2 = [value];
	}
	const callback = useCallback(t1, t2);
	let t3;
	let t4;
	{
		t3 = () => ({ value });
		t4 = [value];
	}
	const memo = useMemo(t3, t4);
	let t5;
	{
		t5 = { get value() {
			return memo.value;
		} };
	}
	const object = t5;
	let t6;
	{
		t6 = <button onClick={callback}>{object.value}</button>;
	}
	return t6;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
