crates/oxc_react_compiler/tests/snapshots/object-expression-accessor-nested-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-accessor-nested-function.js
---
import { useMemo } from "react";
function Component(t0) {
	const { value } = t0;
	const memo = useMemo(() => value, [value]);
	const read = () => {
		const object = { get value() {
			return value;
		} };
		return object.value;
	};
	return <div>{memo + read()}</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
