crates/oxc_react_compiler/tests/snapshots/object-expression-accessor-typescript-annotations.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-accessor-typescript-annotations.tsx
---
type Model = {
	value: number;
};
function Component(t0: {
	value: number;
}) {
	const { value } = t0;
	const identity = _temp;
	const x_0 = value;
	let t1;
	{
		const object = {
			get value(this: Model): typeof x_0 {
				return x_0;
			},
			set value(this: Model, next: number) {}
		};
		t1 = identity(object.value);
	}
	let t2;
	{
		t2 = <div>{t1}</div>;
	}
	return t2;
}
function _temp(x) {
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 0 }],
	sequentialRenders: [{ value: 1 }, { value: 2 }]
};
