crates/oxc_react_compiler/tests/snapshots/object-expression-computed-key-mutate-key-while-constructing-object.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-expression-computed-key-mutate-key-while-constructing-object.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: (BuildHIR::lowerExpression) Expected Identifier, got CallExpression key in ObjectExpression", labels: One([LabeledSpan { label: None, span: SourceSpan { offset: SourceOffset(138), length: 20 }, primary: false }]), help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
